[project]
name = "reddit-crawl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "praw>=7.8.1",
]

[tool.uv.sources]
praw = { url = "https://github.com/praw-dev/praw/archive/main.zip" }

[project.scripts]
rtd = "reddit_crawl.reddit_thread_dumper:main"  # Command name: execution function
